UI: Migliorato design albero referral - layout più chiaro e moderno

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -2228,52 +2228,54 @@
             background: rgba(245, 158, 11, 0.1);
         }
 
-        /* Network Tree Styles */
+        /* Network Tree Styles - Versione migliorata */
         .network-tree {
             margin-top: 2rem;
-            padding: 2rem;
-            background: linear-gradient(to bottom, #f8f9fa 0%, #ffffff 100%);
-            border-radius: 16px;
+            padding: 3rem;
+            background: #f8f9fa;
+            border-radius: 20px;
         }
 
         .network-level {
-            margin-bottom: 3rem;
+            margin-bottom: 4rem;
             position: relative;
         }
 
-        /* Root Level (Tu) */
+        /* Root Level (Tu) - Centrato in alto */
         .root-level {
             display: flex;
             justify-content: center;
-            margin-bottom: 2rem;
+            margin-bottom: 4rem;
+            position: relative;
+        }
+
+        .root-level::after {
+            content: '';
+            position: absolute;
+            bottom: -2rem;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 2px;
+            height: 2rem;
+            background: linear-gradient(to bottom, #667eea, transparent);
         }
 
         .root-node {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border: 4px solid white;
-            box-shadow: 0 10px 40px rgba(102, 126, 234, 0.4);
+            border: none;
+            box-shadow: 0 10px 40px rgba(102, 126, 234, 0.3);
             border-radius: 20px;
-            padding: 2rem;
-            min-width: 250px;
+            padding: 2rem 3rem;
+            min-width: 200px;
             text-align: center;
             position: relative;
             z-index: 10;
         }
 
-        .root-node::after {
-            content: '';
-            position: absolute;
-            bottom: -30px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 3px;
-            height: 30px;
-            background: linear-gradient(to bottom, #667eea, #ddd);
-        }
-
         .root-node .node-icon {
-            font-size: 3rem;
+            font-size: 3.5rem;
             margin-bottom: 1rem;
+            filter: drop-shadow(0 4px 8px rgba(0,0,0,0.2));
         }
 
         .root-node .node-name {
@@ -2281,102 +2283,115 @@
             font-size: 1.5rem;
             font-weight: 700;
             margin-bottom: 0.5rem;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.2);
         }
 
         .root-node .node-code {
-            color: rgba(255, 255, 255, 0.9);
+            color: white;
             font-size: 1rem;
-            background: rgba(255, 255, 255, 0.2);
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
+            background: rgba(255, 255, 255, 0.25);
+            padding: 0.6rem 1.2rem;
+            border-radius: 25px;
             display: inline-block;
             margin-top: 0.5rem;
+            font-weight: 600;
+            backdrop-filter: blur(10px);
         }
 
-        /* Level Header */
+        /* Level Header - Design migliorato */
         .level-title {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
             gap: 1rem;
-            margin-bottom: 2rem;
-            padding: 1rem 2rem;
+            margin-bottom: 2.5rem;
+            padding: 1.2rem 2rem;
             background: white;
-            border-radius: 50px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            max-width: fit-content;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .network-level-header {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            margin-bottom: 1rem;
-            padding: 1rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border-radius: 12px;
-            color: white;
-        }
-
-        .network-level-header h3 {
-            margin: 0;
-            font-size: 1.3rem;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+            border-left: 5px solid #667eea;
         }
 
         .level-badge {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 0.4rem 1.2rem;
-            border-radius: 20px;
-            font-size: 0.9rem;
+            font-size: 1.1rem;
             font-weight: 700;
-            box-shadow: 0 2px 10px rgba(102, 126, 234, 0.3);
-        }
-
-        .level-badge.secondary {
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-            box-shadow: 0 2px 10px rgba(240, 147, 251, 0.3);
+            color: #667eea;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
         }
 
         .level-title span:last-child {
-            color: #666;
+            color: #64748b;
             font-weight: 600;
+            font-size: 0.95rem;
+            background: #f1f5f9;
+            padding: 0.4rem 1rem;
+            border-radius: 20px;
         }
 
-        /* Network Nodes Grid */
+        /* Network Nodes - Layout a griglia migliorato */
         .network-nodes {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 2rem;
-            padding: 0 1rem;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 1.5rem;
+            padding: 0;
             position: relative;
         }
 
-        /* Connecting Lines */
-        .network-level.level-1::before,
-        .network-level.level-2::before {
-            content: '';
-            position: absolute;
-            top: -30px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 80%;
-            height: 2px;
-            background: linear-gradient(to right, transparent, #ddd 20%, #ddd 80%, transparent);
+        /* Stili specifici per livelli */
+        .level-1 .level-title {
+            border-left-color: #3b82f6;
         }
 
-        /* Individual Network Nodes */
+        .level-1 .level-badge {
+            color: #3b82f6;
+        }
+
+        .level-2 .level-title {
+            border-left-color: #8b5cf6;
+        }
+
+        .level-2 .level-badge {
+            color: #8b5cf6;
+        }
+
+        .level-organizations .level-title {
+            border-left-color: #667eea;
+            background: linear-gradient(135deg, #f8f9ff 0%, #ffffff 100%);
+        }
+
+        .level-organizations .level-badge {
+            color: #667eea;
+        }
+
+        /* Individual Network Nodes - Design card migliorato */
         .network-node {
             background: white;
             border: 2px solid #e5e7eb;
             border-radius: 16px;
             padding: 1.5rem;
-            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            transition: all 0.3s ease;
             position: relative;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
             text-align: center;
+            overflow: hidden;
+        }
+
+        .network-node::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, #3b82f6, #8b5cf6);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .network-node:hover::before {
+            opacity: 1;
         }
 
         /* Connecting line from top */
@@ -2392,49 +2407,58 @@
         }
 
         .network-node:hover {
-            border-color: #667eea;
-            box-shadow: 0 8px 30px rgba(102, 126, 234, 0.25);
-            transform: translateY(-5px) scale(1.02);
+            border-color: #3b82f6;
+            box-shadow: 0 8px 25px rgba(59, 130, 246, 0.2);
+            transform: translateY(-3px);
         }
 
         .network-node.secondary {
-            border-color: #fdd;
+            border-color: #e5e7eb;
         }
 
         .network-node.secondary:hover {
-            border-color: #f093fb;
-            box-shadow: 0 8px 30px rgba(240, 147, 251, 0.25);
+            border-color: #8b5cf6;
+            box-shadow: 0 8px 25px rgba(139, 92, 246, 0.2);
         }
 
         .node-icon {
-            font-size: 2.5rem;
+            font-size: 3rem;
             margin-bottom: 1rem;
-            filter: grayscale(0.2);
+            opacity: 0.9;
         }
 
         .node-name {
             font-weight: 700;
-            color: #333;
+            color: #1e293b;
             margin-bottom: 0.5rem;
             font-size: 1.1rem;
+            line-height: 1.4;
         }
 
         .node-email {
-            color: #666;
+            color: #64748b;
             font-size: 0.85rem;
             margin-bottom: 0.75rem;
             word-break: break-word;
+            opacity: 0.9;
         }
 
         .node-code {
-            background: #f3f4f6;
-            padding: 0.3rem 0.8rem;
-            border-radius: 12px;
-            font-size: 0.8rem;
-            color: #667eea;
-            font-weight: 600;
+            background: linear-gradient(135deg, #ede9fe 0%, #ddd6fe 100%);
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            font-size: 0.85rem;
+            color: #5b21b6;
+            font-weight: 700;
             display: inline-block;
             margin-top: 0.5rem;
+        }
+
+        .node-parent {
+            color: #64748b;
+            font-size: 0.8rem;
+            margin-top: 0.8rem;
+            font-style: italic;
         }
 
         .node-points {
@@ -2449,40 +2473,32 @@
             box-shadow: 0 2px 10px rgba(16, 185, 129, 0.3);
         }
 
-        .network-node-email {
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 0.5rem;
-            font-size: 0.95rem;
-        }
-
-        .network-node-date {
-            color: #666;
-            font-size: 0.85rem;
-        }
-
-        /* Network Stats */
+        /* Network Stats - Design migliorato */
         .network-stats {
             background: white;
-            border-radius: 16px;
-            padding: 2rem;
+            border-radius: 20px;
+            padding: 2.5rem;
             margin-top: 3rem;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+            gap: 1.5rem;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+            border: 2px solid #f1f5f9;
         }
 
         .network-stat {
             text-align: center;
-            padding: 1rem;
-            border-radius: 12px;
+            padding: 1.5rem 1rem;
+            border-radius: 15px;
             transition: all 0.3s ease;
+            background: linear-gradient(135deg, #f8fafc 0%, #ffffff 100%);
+            border: 1px solid #e2e8f0;
         }
 
         .network-stat:hover {
-            background: #f8f9fa;
+            background: linear-gradient(135deg, #eef2ff 0%, #ffffff 100%);
             transform: translateY(-3px);
+            box-shadow: 0 4px 15px rgba(59, 130, 246, 0.15);
         }
 
         .stat-value {
