Feature: Doppi codici referral per organizations + Registrazione diretta da QR

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1294,7 +1294,8 @@
                 return;
             }
             
-            const referralUrl = `https://cdm86.com?ref=${referralCode}`;
+            // URL che punta direttamente alla registrazione con codice precompilato
+            const referralUrl = `https://www.cdm86.com/register.html?ref=${referralCode}`;
             console.log('🔗 QR URL:', referralUrl);
             
             // Clear previous QR code
