--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -784,6 +784,12 @@
             50% { transform: translateY(-10px); }
         }
 
+        @keyframes successPop {
+            0% { transform: scale(0); opacity: 0; }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); opacity: 1; }
+        }
+
         .report-details-title {
             color: white;
             font-size: 28px;
@@ -2178,6 +2184,37 @@
         </div>
     </div>
 
+    <!-- SUCCESS MODAL (generico per messaggi di successo) -->
+    <div id="successModal" class="modal">
+        <div class="modal-dialog" style="max-width: 450px;">
+            <div class="modal-content" style="border-radius: 16px; overflow: hidden; box-shadow: 0 20px 60px rgba(0,0,0,0.2);">
+                
+                <!-- Header con gradiente verde -->
+                <div style="background: linear-gradient(135deg, #10b981 0%, #059669 100%); padding: 40px 20px; text-align: center; color: white; position: relative;">
+                    <div style="font-size: 72px; margin-bottom: 15px; animation: successPop 0.5s ease-out;">✅</div>
+                    <h3 id="successTitle" style="margin: 0; font-size: 24px; font-weight: 700; color: white;">Operazione Completata!</h3>
+                </div>
+
+                <!-- Body -->
+                <div style="padding: 35px 30px;">
+                    <div style="text-align: center;">
+                        <p id="successMessage" style="font-size: 16px; color: #374151; line-height: 1.6; margin: 0 0 25px 0;">
+                            L'operazione è stata completata con successo.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Footer -->
+                <div style="padding: 0 30px 35px 30px;">
+                    <button onclick="closeModal('successModal')" style="width: 100%; padding: 14px; border: none; background: linear-gradient(135deg, #10b981 0%, #059669 100%); color: white; border-radius: 10px; font-size: 16px; font-weight: 600; cursor: pointer; transition: all 0.3s; box-shadow: 0 4px 12px rgba(16, 185, 129, 0.4);">
+                        OK
+                    </button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <!-- ADD ORGANIZATION MODAL -->
     <div id="addOrganizationModal" class="modal">
         <div class="modal-dialog">
@@ -2725,6 +2762,13 @@
             document.getElementById(modalId).classList.remove('show');
         };
 
+        // Success Modal Helper
+        window.showSuccessModal = function(title, message) {
+            document.getElementById('successTitle').textContent = title;
+            document.getElementById('successMessage').textContent = message;
+            openModal('successModal');
+        };
+
         // Notification Helper
         window.showNotification = function(title, message, type = 'info') {
             const iconMap = {
@@ -2901,8 +2945,11 @@
                     throw new Error(result.error || 'Errore durante l\'eliminazione');
                 }
 
-                alert(`✅ Utente ${pendingDeleteUser.email} eliminato!`);
                 closeModal('deleteUserModal');
+                showSuccessModal(
+                    'Utente Eliminato!',
+                    `L'utente ${pendingDeleteUser.email} è stato eliminato con successo.`
+                );
                 pendingDeleteUser = null;
                 loadUsers();
             } catch (error) {
